<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.detailnews.DetailNewsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/detail_news"
        app:titleTextColor="@color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/title"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:id="@+id/ivDetail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:scaleType="fitXY"
                android:contentDescription="@string/image_detail"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/description"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/content"
                android:textSize="@dimen/_14ssp"
                android:textColor="@android:color/black"
                android:ellipsize="end"
                android:maxLines="4"/>

            <TextView
                android:id="@+id/tvShowMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_more"
                android:textSize="@dimen/_14ssp"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>