<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_150sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardUseCompatPadding="true"
    android:elevation="@dimen/_5sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:id="@+id/ivHeadline"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_100sdp"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@id/ivHeadline"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_toEndOf="@id/ivHeadline"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/description"
            android:textSize="@dimen/_12ssp"
            android:textColor="@android:color/darker_gray"
            android:ellipsize="end"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datetime"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>